// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OutboundAniSelect /> actions maps the actions to the object correctly 1`] = `
Object {
  "fetchOutboundIdentifierLists": [Function],
  "selectOutboundIdentification": [Function],
}
`;

exports[`<OutboundAniSelect /> doesn't render if there isn't any Outbound ANI 1`] = `""`;

exports[`<OutboundAniSelect /> if getSelectedOutboundIdentifier is undefined 1`] = `
<Select
  id="outboundAniSelect"
  onChange={[Function]}
  options={
    Array [
      Object {
        "id": "1",
        "value": "outboundAni1",
      },
      Object {
        "id": "2",
        "value": "outboundAni2",
      },
      Object {
        "id": "3",
        "value": "outboundAni3",
      },
    ]
  }
  placeholder={
    <FormattedMessage
      defaultMessage="Select Outbound ANI"
      id="app.containers.OutboundAniSelect.selectOutboundAni"
      values={Object {}}
    />
  }
/>
`;

exports[`<OutboundAniSelect /> mapStateToProps maps the selectors to the object correctly 1`] = `
Object {
  "getSelectedOutboundIdentifier": "mock SelectedOutboundIdentifier",
  "selectOutboundIdentifierListsForChannel": "mock SelectOutboundIdentifierListsForChannel",
}
`;

exports[`<OutboundAniSelect /> rendered correctly for voice channel 1`] = `
<Select
  id="outboundAniSelect"
  onChange={[Function]}
  options={
    Array [
      Object {
        "id": "1",
        "value": "outboundAni1",
      },
      Object {
        "id": "2",
        "value": "outboundAni2",
      },
      Object {
        "id": "3",
        "value": "outboundAni3",
      },
    ]
  }
  placeholder={
    <FormattedMessage
      defaultMessage="Select Outbound ANI"
      id="app.containers.OutboundAniSelect.selectOutboundAni"
      values={Object {}}
    />
  }
  value="outboundAni2"
/>
`;

exports[`<OutboundAniSelect /> renders a loading icon while fetching outbound identifier lists assigned to the user 1`] = `
<IconSVG
  id="fetching-outbound-lists-loading-icon"
  name="loading"
  width="40px"
/>
`;
